# Nifti2Gif

./: Makefile  README.md  requirements.txt  setup.cfg
src/nifti2gif/: nifti2gif.py  parser.py
