[metadata]
name = nifti2gif
version = 1.0.0
author = Hartmut Häntze
author_email = hartmut.haentze@charite.de
description = Create gifs from niftis
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/hhaentze/nifti2gif
project_urls =
    Bug Tracker = https://github.com/hhaentze/nifti2gif/issues
    repository = https://github.com/hhaentze/nifti2gif
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    argparse
    nibabel
    scipy
    imageio
    matplotlib
    tqdm

[options.packages.find]
where = src
exclude =
    bundles*
    data*
    logs*
    metadata*
    model*
    notebooks*
    scripts*

[options.entry_points]
console_scripts =
    nifti2gif = nifti2gif.nifti2gif:main